--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjectEditor | Simple, Reliable & Agentic Project Management</title>
     <meta name="description" content="ProjectEditor is a simple, reliable, and agentic project management tool designed to streamline your workflow and boost productivity.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://projecteditor.io/">
+    <meta property="og:title" content="ProjectEditor | Simple, Reliable & Agentic Project Management">
+    <meta property="og:description" content="ProjectEditor is a simple, reliable, and agentic project management tool designed to streamline your workflow and boost productivity.">
+    <meta property="og:image" content="og-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://projecteditor.io/">
+    <meta property="twitter:title" content="ProjectEditor | Simple, Reliable & Agentic Project Management">
+    <meta property="twitter:description" content="ProjectEditor is a simple, reliable, and agentic project management tool designed to streamline your workflow and boost productivity.">
+    <meta property="twitter:image" content="og-image.png">
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
